--- a/tutorials/l_master.ipynb
+++ b/tutorials/l_master.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8378c474",
+   "id": "c2e75b6b",
    "metadata": {},
    "source": [
     "# Custom Time Evolution\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f019b0c1",
+   "id": "41d4a2d6",
    "metadata": {},
    "source": [
     "*Note*: Please consult the tutorial on potentials first."
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfd73198",
+   "id": "5cb1527f",
    "metadata": {},
    "source": [
     "*Note*: While a bit more complicated, this tutorial can help you make your simulations not only more versatile, but also increase their efficiency."
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "62b97172",
+   "id": "8d7451f7",
    "metadata": {},
    "source": [
     "## Hamiltonian"
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ba045172",
+   "id": "a732a330",
    "metadata": {},
    "source": [
     "When calling the integration for the master equation, you can give an optional argument, `hamiltonian`. As already discussed, this argument represents a Hamiltonian as a dictionary of functions."
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0f755a05",
+   "id": "7c272a83",
    "metadata": {},
    "source": [
     "Up to now, we  wanted to use custom potentials, so we  added them to the dictionary. Let's look more closely at what is going on by considering a flake under plane wave illumination."
@@ -53,13 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "513bea1c",
+   "id": "f3f0278b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-17T11:20:02.832620Z",
-     "iopub.status.busy": "2024-10-17T11:20:02.832434Z",
-     "iopub.status.idle": "2024-10-17T11:20:07.097843Z",
-     "shell.execute_reply": "2024-10-17T11:20:07.097229Z"
+     "iopub.execute_input": "2024-11-29T13:28:44.048339Z",
+     "iopub.status.busy": "2024-11-29T13:28:44.048167Z",
+     "iopub.status.idle": "2024-11-29T13:28:48.276588Z",
+     "shell.execute_reply": "2024-11-29T13:28:48.276033Z"
     }
    },
    "outputs": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e50d473",
+   "id": "845e7e0f",
    "metadata": {},
    "source": [
     "As discussed, the default Hamiltonian  has three terms:"
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8d5ff59",
+   "id": "0ba95875",
    "metadata": {},
    "source": [
     "1. a bare hamiltonian.\n",
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4949b2c6",
+   "id": "0d4ef193",
    "metadata": {},
    "source": [
     "Each of these terms is represented by a function. Every function accepts the following three arguments:"
@@ -107,7 +107,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d8c9b0f8",
+   "id": "8f12ae12",
    "metadata": {},
    "source": [
     "1. time\n",
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "91373228",
+   "id": "a54b47e9",
    "metadata": {},
    "source": [
     "Every function maps these arguments to a complex matrix. Before running a simulation, the functions in the dictionary get turned into a list `func_list`. "
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "920500e0",
+   "id": "57e4da90",
    "metadata": {},
    "source": [
     "The matrix representation of the Hamiltonian is then given by applying and adding these functions, like so `H[time] = sum( f(times[time], density_matrix[time], args) for f in func_list )`."
@@ -133,7 +133,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ebaac53",
+   "id": "c4fc0827",
    "metadata": {},
    "source": [
     "## Argument Objects"
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9f65feb",
+   "id": "a6fc4076",
    "metadata": {},
    "source": [
     "The `args` object is a named tuple (like a struct in the C programming language) and we can inspect its contents by looking at its fields "
@@ -150,13 +150,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "f6495e93",
+   "id": "4ee015a4",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-17T11:20:07.100222Z",
-     "iopub.status.busy": "2024-10-17T11:20:07.099775Z",
-     "iopub.status.idle": "2024-10-17T11:20:08.962212Z",
-     "shell.execute_reply": "2024-10-17T11:20:08.961650Z"
+     "iopub.execute_input": "2024-11-29T13:28:48.279005Z",
+     "iopub.status.busy": "2024-11-29T13:28:48.278561Z",
+     "iopub.status.idle": "2024-11-29T13:28:50.168280Z",
+     "shell.execute_reply": "2024-11-29T13:28:50.167642Z"
     }
    },
    "outputs": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5ddfdcaa",
+   "id": "a085d471",
    "metadata": {},
    "source": [
     "We can access individual entries"
@@ -184,13 +184,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d372afd5",
+   "id": "ea3afe72",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-17T11:20:08.964500Z",
-     "iopub.status.busy": "2024-10-17T11:20:08.964003Z",
-     "iopub.status.idle": "2024-10-17T11:20:08.967784Z",
-     "shell.execute_reply": "2024-10-17T11:20:08.967198Z"
+     "iopub.execute_input": "2024-11-29T13:28:50.170573Z",
+     "iopub.status.busy": "2024-11-29T13:28:50.170227Z",
+     "iopub.status.idle": "2024-11-29T13:28:50.173961Z",
+     "shell.execute_reply": "2024-11-29T13:28:50.173293Z"
     }
    },
    "outputs": [
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fcba163d",
+   "id": "51fdaf3b",
    "metadata": {},
    "source": [
     "The `args` object is a lower-level representation of the OrbitalList object: a collection of numbers and arrays that represent the structure."
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bce1fc9e",
+   "id": "47ae4c3f",
    "metadata": {},
    "source": [
     "The evolution is determined by the Hamiltonian. It is given by an addition of functions. Each of these functions depends on time, the density matrix and the simulated structure. So, a single function representing a term in the Hamiltonian has the following signature `term: time, density_matrix, args -> matrix`."
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ffa5fe1e",
+   "id": "d284bd65",
    "metadata": {},
    "source": [
     "## Computing Terms"
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2a58b3ba",
+   "id": "fac024ee",
    "metadata": {},
    "source": [
     "Individual terms of the default Hamiltonian can be inspected and since these are functions, applied to arguments. First, consider the bare Hamiltonian"
@@ -241,13 +241,13 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "6eb15c3a",
+   "id": "c67e41a6",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-17T11:20:08.969856Z",
-     "iopub.status.busy": "2024-10-17T11:20:08.969317Z",
-     "iopub.status.idle": "2024-10-17T11:20:09.013754Z",
-     "shell.execute_reply": "2024-10-17T11:20:09.013157Z"
+     "iopub.execute_input": "2024-11-29T13:28:50.175737Z",
+     "iopub.status.busy": "2024-11-29T13:28:50.175551Z",
+     "iopub.status.idle": "2024-11-29T13:28:50.218844Z",
+     "shell.execute_reply": "2024-11-29T13:28:50.218315Z"
     }
    },
    "outputs": [
@@ -271,7 +271,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "367e1eae",
+   "id": "2f8b66bc",
    "metadata": {},
    "source": [
     "The function returns the bare Hamiltonian, independent of the time and density matrix. Let's compute the Coulomb potential at the initial time"
@@ -280,13 +280,13 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b1fdb9ac",
+   "id": "ec796f40",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-17T11:20:09.015813Z",
-     "iopub.status.busy": "2024-10-17T11:20:09.015465Z",
-     "iopub.status.idle": "2024-10-17T11:20:09.082847Z",
-     "shell.execute_reply": "2024-10-17T11:20:09.082272Z"
+     "iopub.execute_input": "2024-11-29T13:28:50.220836Z",
+     "iopub.status.busy": "2024-11-29T13:28:50.220495Z",
+     "iopub.status.idle": "2024-11-29T13:28:50.287005Z",
+     "shell.execute_reply": "2024-11-29T13:28:50.286384Z"
     }
    },
    "outputs": [
@@ -309,7 +309,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d573ff4",
+   "id": "c7c65555",
    "metadata": {},
    "source": [
     "At the start of the simulation, there is no induced Coulomb potential (all entries in the matrix are zero), because the system is in its ground state."
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "03a43c89",
+   "id": "f0f89201",
    "metadata": {},
    "source": [
     "Last, there is the external potential. Since no transition dipole moments are considered, it will be entirely diagonal in site basis"
@@ -326,13 +326,13 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "244ea433",
+   "id": "11c6712c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-17T11:20:09.085201Z",
-     "iopub.status.busy": "2024-10-17T11:20:09.084712Z",
-     "iopub.status.idle": "2024-10-17T11:20:09.113229Z",
-     "shell.execute_reply": "2024-10-17T11:20:09.112705Z"
+     "iopub.execute_input": "2024-11-29T13:28:50.289364Z",
+     "iopub.status.busy": "2024-11-29T13:28:50.288983Z",
+     "iopub.status.idle": "2024-11-29T13:28:50.317583Z",
+     "shell.execute_reply": "2024-11-29T13:28:50.317083Z"
     }
    },
    "outputs": [
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "78d8652a",
+   "id": "d8a10bc0",
    "metadata": {},
    "source": [
     "## Modelling Terms"
@@ -363,7 +363,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8a5dfc5",
+   "id": "8a80363c",
    "metadata": {},
    "source": [
     "To include arbitrary terms in the time evolution, we define a function that"
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "02e2826f",
+   "id": "d00e6279",
    "metadata": {},
    "source": [
     "1. Accepts `time, density_matrix, args`\n",
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "87d1f53e",
+   "id": "d7af5e04",
    "metadata": {},
    "source": [
     "Then, we insert it in the dictionary, potentially overwriting a default key."
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "954d14da",
+   "id": "5015053a",
    "metadata": {},
    "source": [
     "Let's illustrate this at the example of a custom scalar potential. We want to replace the dipole-gauge coupling $\\vec{E} \\vec{P}$ with a scalar potential representing a plane-wave pulse. Let's define this potential first"
@@ -398,13 +398,13 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "33073803",
+   "id": "6992b9a9",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-17T11:20:09.115248Z",
-     "iopub.status.busy": "2024-10-17T11:20:09.114904Z",
-     "iopub.status.idle": "2024-10-17T11:20:09.118990Z",
-     "shell.execute_reply": "2024-10-17T11:20:09.118454Z"
+     "iopub.execute_input": "2024-11-29T13:28:50.319785Z",
+     "iopub.status.busy": "2024-11-29T13:28:50.319328Z",
+     "iopub.status.idle": "2024-11-29T13:28:50.323639Z",
+     "shell.execute_reply": "2024-11-29T13:28:50.323117Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -423,7 +423,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4de5b331",
+   "id": "77f94e64",
    "metadata": {},
    "source": [
     "Now, we replace the default potential with our custom term,  as we did before in the case of the pulsed dipole."
@@ -432,13 +432,13 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "c524ea9b",
+   "id": "d7d26740",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-17T11:20:09.120890Z",
-     "iopub.status.busy": "2024-10-17T11:20:09.120552Z",
-     "iopub.status.idle": "2024-10-17T11:20:09.123522Z",
-     "shell.execute_reply": "2024-10-17T11:20:09.122913Z"
+     "iopub.execute_input": "2024-11-29T13:28:50.325592Z",
+     "iopub.status.busy": "2024-11-29T13:28:50.325242Z",
+     "iopub.status.idle": "2024-11-29T13:28:50.328256Z",
+     "shell.execute_reply": "2024-11-29T13:28:50.327614Z"
     }
    },
    "outputs": [],
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2ed3d099",
+   "id": "a20691d4",
    "metadata": {},
    "source": [
     "To run a time-domain simulation, we  pass the modified Hamiltonian dictionary directly, as demonstrated in the first section"
@@ -457,13 +457,13 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "b8475593",
+   "id": "cb55fd11",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-17T11:20:09.125247Z",
-     "iopub.status.busy": "2024-10-17T11:20:09.125064Z",
-     "iopub.status.idle": "2024-10-17T11:20:11.707762Z",
-     "shell.execute_reply": "2024-10-17T11:20:11.707099Z"
+     "iopub.execute_input": "2024-11-29T13:28:50.330290Z",
+     "iopub.status.busy": "2024-11-29T13:28:50.329946Z",
+     "iopub.status.idle": "2024-11-29T13:28:52.931288Z",
+     "shell.execute_reply": "2024-11-29T13:28:52.930742Z"
     }
    },
    "outputs": [
@@ -507,7 +507,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6d99217",
+   "id": "175a8321",
    "metadata": {},
    "source": [
     "## Modelling Dissipators"
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4c7bfe57",
+   "id": "ca355754",
    "metadata": {},
    "source": [
     "Dissipators are modelled as functions with the same signature as terms in the Hamiltonian, i.e. to model a custom dissipator"
@@ -523,7 +523,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44c2222e",
+   "id": "d8718803",
    "metadata": {},
    "source": [
     "1. Define a function `diss : time, density_matrix, args -> jax.Array`\n",
@@ -533,7 +533,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "978b77bb",
+   "id": "c087c02b",
    "metadata": {},
    "source": [
     "You can also get defaults"
@@ -542,13 +542,13 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "ee5147a3",
+   "id": "5883f439",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-17T11:20:11.709990Z",
-     "iopub.status.busy": "2024-10-17T11:20:11.709493Z",
-     "iopub.status.idle": "2024-10-17T11:20:11.713687Z",
-     "shell.execute_reply": "2024-10-17T11:20:11.713180Z"
+     "iopub.execute_input": "2024-11-29T13:28:52.933430Z",
+     "iopub.status.busy": "2024-11-29T13:28:52.933044Z",
+     "iopub.status.idle": "2024-11-29T13:28:52.936717Z",
+     "shell.execute_reply": "2024-11-29T13:28:52.936128Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -558,7 +558,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7f5ef7f6e160>}\n"
+      "{'decoherence_time': <function DecoherenceTime.<locals>.<lambda> at 0x7ff0b5c0ba60>}\n"
      ]
     }
    ],
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ff317aab",
+   "id": "dd7cd280",
    "metadata": {},
    "source": [
     "NOTE: To pass the dissipator above to the `master_equation` method, you have to specify the relaxation rate again. "
@@ -577,7 +577,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50910ee4",
+   "id": "aa64db02",
    "metadata": {},
    "source": [
     "## Postprocesses"
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "154b23f4",
+   "id": "9608d7b1",
    "metadata": {},
    "source": [
     "You can define custom postprocesses. These are functions with the signature `postprocess : density_matrix_batch, args -> array`. The `density_matrix_batch` is an array of shape `TxNxN`, where `T` encodes time."
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "89e96e59",
+   "id": "f678332d",
    "metadata": {},
    "source": [
     "For example, if you are only interested in the occupation of the 0-th state"
@@ -602,13 +602,13 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "bbadcb6d",
+   "id": "e77d9f6b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-17T11:20:11.715710Z",
-     "iopub.status.busy": "2024-10-17T11:20:11.715332Z",
-     "iopub.status.idle": "2024-10-17T11:20:11.718391Z",
-     "shell.execute_reply": "2024-10-17T11:20:11.717894Z"
+     "iopub.execute_input": "2024-11-29T13:28:52.938684Z",
+     "iopub.status.busy": "2024-11-29T13:28:52.938343Z",
+     "iopub.status.idle": "2024-11-29T13:28:52.941509Z",
+     "shell.execute_reply": "2024-11-29T13:28:52.940940Z"
     },
     "lines_to_end_of_cell_marker": 0,
     "lines_to_next_cell": 1
@@ -622,13 +622,13 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "2684e075",
+   "id": "c2a3050d",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2024-10-17T11:20:11.720246Z",
-     "iopub.status.busy": "2024-10-17T11:20:11.719901Z",
-     "iopub.status.idle": "2024-10-17T11:20:12.810997Z",
-     "shell.execute_reply": "2024-10-17T11:20:12.810344Z"
+     "iopub.execute_input": "2024-11-29T13:28:52.943318Z",
+     "iopub.status.busy": "2024-11-29T13:28:52.942990Z",
+     "iopub.status.idle": "2024-11-29T13:28:54.022630Z",
+     "shell.execute_reply": "2024-11-29T13:28:54.021959Z"
     }
    },
    "outputs": [
